--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,9 @@
-@import "tailwindcss/postcss";
+@import "tailwindcss";
+
+
+h1 {
+    @apply text-5xl font-bold
+}
+h2 {
+    @apply text-4xl font-semibold
+}
